--- a/src/App.css
+++ b/src/App.css
@@ -2,88 +2,59 @@
   color:#fefefe
 }
 
-.singin-box {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.singin-name {
-  padding: 0 5px;
-}
-
-.singin {
-  display: inline-flex;
-  padding: 5px 10px;
-  border: 0.1em solid #aaa;
-  border-radius: 10px;
-  font-size: 1em;
-  margin-right: 0;
-  cursor: pointer;
-}
-
-.singin:hover {
-  border: 0.1em solid #2e9ddd;
-}
-
 .App-header {
-  height: 2em;
   margin: 0.5em 0;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
-  font-size: 1.5em;
   color: #fefefe;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-
-.account-name {
-  padding: 0 10px;
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.account-address {
-  font-size: 13px;
-  color: #868686;
-  font-weight: 400;
-}
-
-
-
 .highlight {
   border-radius: 5px;
-  border-color: #d1ccbd;
-  border: 0.1em solid #aaa;
+  border-color: #aaaaaa;
+  border: 0.15em solid #aaa;
   padding: 0.5em 1em;
-}
-.highlight {
   align-items: center;
   display: flex;
-  margin-bottom: 0.5em;
-}
-
-.highlight label {
-  margin-right: 0.5em;
+  margin-bottom: 1em;
 }
 
 label {
   color: #888888;
+  margin-right: 1em;
 }
 
-button, input {
+input {
   background: transparent;
   color: inherit;
   cursor: pointer;
   font: inherit;
   outline: none;
-}
-
-input {
   border: none;
   flex: 1;
+}
+
+input[type="number"] {
+  border-bottom: 0.1em solid #aaa;
+  text-align: center;
+  max-width: 5em;
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+opacity: 1;
+}
+
+.sendButton {
+  border: .1em solid #aaaaaa;
+  font-size: 1.5em;
+  padding: .2em 1em;
+  background: transparent;
+  color: inherit;
+  cursor: pointer;
+}
+
+.sendButton:hover {
+  border: .1em solid #e6007a;
 }
