--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;500;600;700&family=Syncopate:wght@400;700&display=swap');
 
 * {
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	outline: none;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  outline: none;
 }
 
 html {
-	margin: 0;
-	height: 100%;
+  margin: 0;
+  height: 100%;
 }
 
 body {
-	height: 100%;
-	font-size: 21px;
-	font-family: 'Prompt', sans-serif;
-	color: #bcbcbc;
-	line-height: 130%;
-	padding: 0;
-	margin: 0;
-	position: relative;
-	background: #282828 url('./images/main-bg.jpg') no-repeat 50% 0;
-	background-size: 1600px auto;
-	-webkit-text-size-adjust: none;
+  height: 100%;
+  font-size: 21px;
+  font-family: 'Prompt', sans-serif;
+  color: #bcbcbc;
+  line-height: 130%;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  background: #282828 url('./images/main-bg.svg') no-repeat 50% 0;
+  background-size: 1600px auto;
+  -webkit-text-size-adjust: none;
 }
 
 header,
@@ -37,36 +37,36 @@ aside,
 figure,
 footer,
 main {
-	display: block;
-	padding: 0;
-	margin: 0;
+  display: block;
+  padding: 0;
+  margin: 0;
 }
 
 /*tags*/
 
 a {
-	color: #fff;
-	text-decoration: none;
-	transition: all 0.3s;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.3s;
 }
 
 a:hover {
-	color: #bcbcbc;
-	text-decoration: none;
+  color: #bcbcbc;
+  text-decoration: none;
 }
 
 p {
-	padding: 0 0 20px 0;
-	margin: 0;
+  padding: 0 0 20px 0;
+  margin: 0;
 }
 
 ul,
 ol {
-	padding: 0 0 20px 30px;
-	margin: 0;
+  padding: 0 0 20px 30px;
+  margin: 0;
 }
 
 img {
-	display: block;
-	border: none;
+  display: block;
+  border: none;
 }
