Define subcomponents folder, rename message list

--- a/src/components/Guestbook/children/Form/Form.scss
+++ b/src/components/Guestbook/children/Form/Form.scss
@@ -67,11 +67,11 @@
 }
 
 .counter .minus {
-  background: url('../../../images/counter-prev-arrow.svg') no-repeat 50%;
+  background: url('/images/counter-prev-arrow.svg') no-repeat 50%;
 }
 
 .counter .plus {
-  background: url('../../../images/counter-next-arrow.svg') no-repeat 50%;
+  background: url('/images/counter-next-arrow.svg') no-repeat 50%;
 }
 
 .counter input {
